--- a/index.css
+++ b/index.css
@@ -1,4 +1,11 @@
 body{
     padding: 0;
-    margin: 0;
+    margin: 0;   
+    background-image: linear-gradient( 115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ), url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+}
+
+#survey-form{
+    background-color: rgba(27, 27, 50, 0.8);
+    color: white;
+
 }
